styles/styles.css
html {
  font-family: "Times New Roman";
}
html.font-alt {
  font-family: 'ComicSans';
}

body {
  overflow-y: scroll;
  overflow-x: hidden;
  scrollbar-color: red orange;
  scrollbar-width: thin;
}

/* https://stackoverflow.com/questions/25444657/how-to-achieve-this-bevel-button-in-css */
button {
    display: inline-block;
    color: black;
    text-shadow: 0 0 2px rgba(0,0,0,.3);
    font-family: 'Times New Roman';
    box-shadow:
        inset 0 0 2px 0 rgba(255,255,255,.4),
        inset 0 0 3px 0 rgba(0,0,0,.4),
        inset 0 0 3px 5px rgba(0,0,0,.05),
        2px 2px 4px 0 rgba(0,0,0,.25);
    border-radius: 4px;
    padding: 5px 5px;
    font-size: 15px;
    line-height: 14px;
}

a.bright {
  color: lightcyan;
}
a.bright:visited {
  color: lightcoral;
}

details {
  margin: 10px;
  border:2px solid white;
  color:white;
  background-size: 100% 100%;
  background-attachment: fixed;
}

details.dark-green {
  background-image: url("../assets/windows_vista_beta_74.jpg");
  background-color: darkolivegreen;
  background-blend-mode: multiply;
}
details.dark-green a {
  color:cyan;
}
details.dark-green a:visited {
  color:#FF67FF;
}

details.blender {
  border:2px solid turquoise;
  color:white;
  background-image: url("../assets/dell_40.jpg");
  background-size: 120%;
}
details.blender a {
  color:rgb(47, 47, 186);
}
details.dark-green a:visited {
  color:rgb(255, 131, 255);
}

details.dark-purple {
  border: 2px solid purple;
  background-image: url("../assets/windows_vista_beta_107.jpg");
  background-color: purple;
  background-blend-mode: multiply;
}
details.dark-purple a {
  color:greenyellow;
}
details.dark-purple a:visited {
  color:orange;
}

details.dark-red {
  border: 2px solid red;
  background-image: url("../assets/dell_17.jpg");
}
details.dark-red a {
  color:greenyellow;
}
details.dark-red a:visited {
  color:orange;
}

h1, h2, h3 {
  text-decoration-line: underline;
  text-align: center;
}
h2, h3 {
  margin-bottom: 0px;
}

iframe {
  max-width: 100%;
}

img {
  margin: 5px;
}
img.fancy {
  border: 1px solid white;
}

table {
    margin-left: auto;
    margin-right: auto;
}

table, th, tr {
    font-weight: lighter;
    border: 5px groove #51414F;
    border-collapse: collapse;
    text-align: left;
}

th, tr {
    padding: 4px;
}

/* IDs */
#main-content {
  display: flex;
  flex-direction: row;
}

#everything-else {
  flex: 1;
}

#mobile-info-button {
  display: none;
  border-radius: 0px;
  width: 5rem;
  height: 5rem;
  background-image: url("../assets/dell_40.jpg");
  background-color: blue;
  color: white;
  border: 3px solid black;
  position: fixed;
  top: 0.2em;
  right: 0.2em;
  text-shadow: 0 0 10px white, 0 0 2px white, 0 0 5px gray;
  box-shadow: 0.1em 0.1em 0.1em black;
  z-index: 10;
  background-blend-mode: multiply;
}

#mobile-info-button:active {
  background-color: blue;
  translate: 0.1em 0.1em 0.1em;
  box-shadow: 0 0 0 black;
}

#mobile-menu-container::before {
  content: "";

  position: fixed;
  background-image: url("../assets/windows_vista_beta_75.jpg");
  background-color: #272ccc99;
  background-blend-mode: multiply;

  width: calc(100% - (var(--m) - var(--bw) + 6px) * 2);
  height: calc(100% - (var(--m) - var(--bw) + 6px) * 2);

  --blur: 2px;

  -webkit-filter: blur(var(--blur));
  -moz-filter: blur(var(--blur));
  -o-filter: blur(var(--blur));
  -ms-filter: blur(var(--blur));
  filter: blur(var(--blur));

  border: 4px dashed black;
  z-index: 1;
}

#mobile-menu-container {
  display: none;
  --m: 1.2rem;
  --bw: 0.2rem;
  position: fixed;
  margin: var(--m);
  top: 0;
  left: 0;
  width: calc(100% - (var(--m) - var(--bw)) * 2);
  height: calc(100% - (var(--m) - var(--bw)) * 2);
  z-index: 1;
}

#mobile-menu {
  display: flex;
  flex-direction: column;
  padding-right: 1rem;
  padding-left: 0.7rem;
  color: greenyellow;
  z-index: 1;
  align-items: stretch;
}
#mobile-menu a {
  font-weight: bold;
  color: aqua;
}
#mobile-menu a:visited {
  color: magenta;
}

.mm-subcontainer {
  margin: 0.2rem;
  display: flex;
  flex-direction: row;
  height: auto;
  z-index: inherit;
}
.mm-column {
  margin: 0.1rem;
  padding: 0.3rem;
  border: 3px solid black;
  background-color: #000000aa;
  display: flex;
  flex-direction: column;
}

@media screen and (pointer: none) {
  #mouse-trail-toggle {
    display: none;
  }
}

#sidebar-container {
  background-image: url("../assets/dell_10.jpg");
  background-position-x: center;
  flex: 100% 100% 0;
  width: 14%;
  max-width: 200px;
  margin: 10px;
  margin-right: -1.5%;
  border: 4px solid black;
  border-right: #0000;
  justify-content: space-between;
}

#sidebar {
  flex-direction: column;
  font-weight: bold;
  color: greenyellow;
  margin: auto;

  top: 0;
  position: -webkit-sticky;
  position: sticky;
  padding-right: 10%;
  text-align: center;
}

#sidebar a {
  color: cyan;
}

#sidebar a:visited {
  color: magenta;
}

/* classes */

.center-image {
    padding: 2em;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.center-container {
  padding-top: 2em;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  margin-left: auto;
  margin-right: auto;
}

.flanking-image {
  padding: 1px;
  margin: 1px;
  vertical-align: middle;
}

.flashing {
  text-shadow: 
    -1px -1px 0 #000;
}

.footer {
  border: 2px solid blue;
  margin-top: 10px;
  padding: 5px;
  padding-top: 0px;
  background-image: url("../assets/windows_xp_37.jpg");
  background-size: 100% 100%;
  background-attachment: fixed;
  color: white;
}

.tooltip {
    scale: 150%;
    visibility: hidden;
    width: 60px;
    height: 40px;
    background-image: url("../assets/copier.gif");
    background-repeat: no-repeat;
    background-position-y: 20px;
    background-position-x: 20px;
    color: black;
    font-weight: bold;
    padding: 5px;
    text-align: center;
    z-index: 1;
    position: absolute;
    position: clamp(90dvh, 90dvh);
}

.warning {
    text-align: center;
    color: red;
    font-size: 1.5em;
    font-weight: bold;
}

.bg-light {
  /* background-image: linear-gradient(to bottom, powderblue, thistle); */
  background-image: url("../assets/windows_vista_beta_76.jpg");
  min-height: 100dvh;
  background-size: cover;
  background-attachment: fixed;
  background-repeat: repeat;
}

.bg-dark {
  /* background-image: linear-gradient(to bottom, powderblue, thistle); */
  background-image: url("../assets/perfect_hue_102.jpg");
  min-height: 100dvh;
  background-size: cover;
  background-attachment: fixed;
  background-repeat: repeat;
  color: white;
}
.bg-dark a {
  color: lightblue;
}
.bg-dark a:visited {
  color: palevioletred;
}

@media screen and (width < 40rem) {
  #sidebar-container, #mouse-trail-toggle {
    display: none;
  }
  #mobile-info-button {
    display: block;
  }
  .rd-target {
    flex-direction: column !important;
  }
}

/*
Source - https://stackoverflow.com/a/67968068
Posted by brc-dd, modified by community. See post 'Timeline' for change history
Retrieved 2026-05-19, License - CC BY-SA 4.0
*/

.wrapper {
  max-width: 100%;
  overflow: hidden;
  margin: 0 auto;
  border: 2px solid black;
  background-color: black;
}

.marquee {
  white-space: nowrap;
  overflow: hidden;
  display: inline-block;
  color: white;
  animation: marquee 60s linear infinite;
}

.marquee p {
  display: inline-block;
}

@keyframes marquee {
  0% {
    transform: translate3d(0, 0, 0);
  }
  100% {
    transform: translate3d(-50%, 0, 0);
  }
}

/* end citation */

/* spinning logos in the skills section */

#spinning-logos {
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
  margin-top: 6%;
  margin-bottom: 15%;
}

.bubble {
  opacity: 0.7;
}

.bubble-caption {
  font-family: 'ComicSans';
  width: 12rem;
  top: 50%;
  left: 50%;
  transform: translate(-46.6%, 4vw);
  position: absolute;
  text-align: center;
}

.depth-wrapper {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  position: relative;
}

.logo-bubble {
  position: relative;
}

.logo-bubble .logo {
  width: 5vw;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  position: absolute;
}

.logo-bubble .bubble {
  width: 8vw;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  position: absolute;
}

#unity-bubble .logo{
  transform: translate(-57%, -50%);
}

#typescript-bubble .logo, #fmod-bubble .logo {
  scale: 80%;
  transform: translate(-62%, -62%);
}

